changed trigger path

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,7 @@ trigger:
       - master
   paths:
     include:
-      - /FU.WhyAmIBlocked/ReleaseNotes.txt
+      - /SuperSecret.Tools/ReleaseNotes.txt
     exclude:
       - /.gitignore
       - /readme.md
